--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.4",
     "dotenv": "^8.2.0",
     "register-service-worker": "^1.6.2",
+    "unirest": "^0.6.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vuetify": "^2.2.11",
