--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "register-service-worker": "^1.6.2",
     "unirest": "^0.6.0",
     "vue": "^2.6.11",
+    "vue-cookies": "^1.7.0",
     "vue-router": "^3.1.5",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.2"
